# image-bin-packing

./: .gitignore  LICENSE  README.md  image-bin-packing.cabal
src/: Main.hs  Test.hs
src/RectBinPacker/: Bin.hs  BinRotatable.hs  Geometry.hs  Image.hs
